# grizld

./: .gitignore  Cargo.toml  README.md  overview.md
docs/: clean.md  handoff.md  hardware-acceleration-plan.md  plan.md  revised-hardware-acceleration-plan.md
editor/: Cargo.toml
editor/src/: app.rs  audio.rs  buffer_manager.rs  main.rs  renderer.rs
editor/src/command/: executor.rs  mod.rs  parser.rs
editor/src/metal/: layer_manager.rs  mod.rs  video_renderer.rs
editor/src/metal/shaders/: yuv_to_rgb.metal
old/vp-core/: .gitignore  Cargo.toml  README.md  build.rs
old/vp-core/_examples_archive/: decode_benchmark.rs  egui_metal_video_poc.rs
old/vp-core/_examples_archive/shaders/: display.wgsl
old/vp-core/docs/: hardware_rendering_handoff.md  iosurface_wgpu_findings.md
old/vp-core/src/: audio.rs  buffer.rs  clock.rs  decoder.rs  error.rs  frame.rs  input.rs  lib.rs  util.rs
old/vp-core/src/decoder/: audio.rs  ffmpeg.rs  video_toolbox.rs
old/vp-core/src/render/: layout.rs  mod.rs
old/vp-core/src/render/metal/: mod.rs  renderer.rs
old/vp-core/src/render/shaders/: p210_to_rgb.metal
vp-core/: Cargo.toml
vp-core/src/: error.rs  frame_scheduler.rs  lib.rs  player.rs  pull_coordinator.rs  sync.rs  types.rs
vp-core/src/buffer/: audio_buffer.rs  frame_buffer.rs  mod.rs
vp-core/src/cache/: audio_cache.rs  frame_cache.rs  mod.rs
vp-core/src/decoder/: audio.rs  decode_service.rs  demux_service.rs  hw_accel.rs  mod.rs  video.rs
vp-core/src/types/: metal_texture_cache.rs  mod.rs  pixel_buffer.rs
